--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,6 +1,8 @@
+
 .left-logo {
     float: left;
     width: 50%;
+    padding: 20px;
     border-right-style: double;
     border-width: 10px;
 
@@ -20,8 +22,50 @@
 .right-input {
     display: flex;
     justify-content: end;
-    align-items: end;
     float: right;
     width: 50%;
 
 }
+
+h1 {
+    text-align: center;
+}
+
+.input-form {
+    margin-top: 100px;
+    height: 50%;
+    width: 100%;
+    padding: 50px;
+}
+
+.userName-text {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.title-text {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+.content-text {
+    width: 100%;
+    height: 75px;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+
+input[type=submit] {
+    cursor: pointer;
+    width: 100%;
+    padding: 5px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
+
